--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-      "ext-http": "*"
+        "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
